welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:-6: error: Missing closing brace `}' assumed here
try {
^close10:1: error: expected class or object definition
def close10(a:Int, b:Int): Int = {
^